[package]
name = "Polygon-pol-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }  # SQLite embedded (no DLL trouble)
anyhow = "1.0"                                          # simple error handling
dotenvy = "0.15"                                        # load .env (optional)
