[package]
name = "Polygon-pol-indexer"
version = "0.1.0"
edition = "2024"

[dependencies] 
anyhow = "1.0"                                          # simple error handling
dotenvy = "0.15"                                        # load .env variables
rusqlite = { version = "0.31", features = ["bundled"] }  # for sqlite handling async
reqwest = { version = "0.11", features = ["json"] }      # for http client
tokio = { version = "1", features = ["full"] }           # for async runtime
serde_json = "1.0"                                       # for json file handling
chrono = "0.4"